Project

General

Profile

Actions

Bug #15684

closed

radosgw-admin missing 'zonegroup remove'

Added by Casey Bodley almost 8 years ago. Updated almost 8 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

'zone delete' is currently the only way to remove a zone from a zonegroup, but it can only be run on that zone's local cluster. 'zonegroup remove' is needed to remove a zone from its zonegroup, a) from another cluster, or b) without deleting the zone itself.


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #15798: jewel: radosgw-admin missing 'zonegroup remove'ResolvedYehuda SadehActions
Actions #1

Updated by Yehuda Sadeh almost 8 years ago

  • Status changed from New to Pending Backport
Actions #2

Updated by Nathan Cutler almost 8 years ago

  • Copied to Backport #15798: jewel: radosgw-admin missing 'zonegroup remove' added
Actions #3

Updated by Nathan Cutler almost 8 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF