radosgw-admin: add missing 'zonegroup remove'

Fixes: http://tracker.ceph.com/issues/15684

Signed-off-by: Casey Bodley <cbodley@redhat.com>
(cherry picked from commit db0fa48ed5958d37928f893acd44cd66b6b9b990)