src/test/cli/radosgw-admin/help.t
@@ -55,6 +55,7 @@
     zonegroup get              show zone group info
     zonegroup modify           set/clear zonegroup master status
     zonegroup set              set zone group info (requires infile)
+    zonegroup remove           remove a zone from a zonegroup
     zonegroup rename           rename a zone group
     zonegroup list             list all zone groups set on this cluster
     zonegroup-map get          show zonegroup-map
